Fix tab jumping

--- a/resources/sass/tabs.scss
+++ b/resources/sass/tabs.scss
@@ -13,9 +13,20 @@
       display: block;
 
       &.active {
-        border: 1px solid $gray;
-        border-bottom: $white;
-        background: $white;
+        position: relative;
+
+        &::after {
+          content: ' ';
+          display:block;
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+
+          border: 1px solid $gray;
+          border-bottom: 1px solid $white;
+        }
       }
     }
   }
